added cracosetup and config with homepage

--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
 	"author": "Friends of Agape <mathew.joel@protonmail.com>",
 	"license": "GPL-3.0",
 	"main": "public/electron.js",
+	"homepage": ".",
 	"dependencies": {
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
+		"@craco/craco": "5.6.4",
+		"customize-cra": "^0.2.12",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-scripts": "3.4.1"
@@ -34,6 +37,8 @@
 	"scripts": {
 		"start": "concurrently \"npm run react-start\" \"wait-on http://localhost:3000/ && cross-env NODE_ENV=development npm run electron-start\"",
 		"electron-start": "electron .",
+		"react-start": "craco start",
+		"react-build": "craco build",
 		"build": "npm run build:electron",
 		"build:electron": "craco build --config craco.config.js main=build/electron.js",
 		"electron-pack": "electron-builder --x64 --win --linux -p never"
@@ -56,6 +61,7 @@
 	"devDependencies": {
 		"@rescripts/cli": "0.0.10",
 		"@rescripts/rescript-env": "0.0.12",
+		"babel-plugin-react-intl": "^7.5.0",
 		"concurrently": "^5.1.0",
 		"cross-env": "^7.0.2",
 		"electron": "^8.2.3",
