added content folder and modified App.js

--- a/package.json
+++ b/package.json
@@ -2,15 +2,21 @@
 	"name": "autographa",
 	"version": "0.1.0",
 	"author": "Friends of Agape <mathew.joel@protonmail.com>",
-	"license": "GPL-3.0",
+	"license": "MIT",
 	"main": "public/electron.js",
 	"homepage": ".",
 	"dependencies": {
+		"@craco/craco": "5.6.4",
+		"@material-ui/core": "^4.9.12",
+		"@material-ui/icons": "^4.9.1",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
-		"@craco/craco": "5.6.4",
 		"customize-cra": "^0.2.12",
+		"leveldown": "5.6.0",
+		"mobx": "5.15.4",
+		"pouchdb": "7.2.1",
+		"pouchdb-quick-search": "^1.3.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-scripts": "3.4.1"
