--- a/package.json
+++ b/package.json
@@ -47,10 +47,14 @@
 		"react-build": "craco build",
 		"build": "npm run build:electron",
 		"build:electron": "craco build --config craco.config.js main=build/electron.js",
+		"precommit": "lint-staged",
 		"electron-pack": "electron-builder --x64 --win --linux -p never"
 	},
-	"eslintConfig": {
-		"extends": "react-app"
+	"lint-staged": {
+		"src/**/*,{js,jsx,json,css}": [
+			"prettier --write",
+			"git add"
+		]
 	},
 	"browserslist": {
 		"production": [
@@ -72,6 +76,11 @@
 		"cross-env": "^7.0.2",
 		"electron": "^8.2.3",
 		"electron-builder": "^22.5.1",
+		"eslint-config-prettier": "^6.11.0",
+		"eslint-plugin-prettier": "^3.1.3",
+		"husky": "^4.2.5",
+		"lint-staged": "^10.2.2",
+		"prettier": "^2.0.5",
 		"wait-on": "^4.0.2"
 	}
 }
