--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
 		"@craco/craco": "5.6.4",
 		"@material-ui/core": "^4.9.12",
 		"@material-ui/icons": "^4.9.1",
+		"@material-ui/lab": "^4.0.0-alpha.52",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"leveldown": "5.6.0",
 		"mobx": "5.15.4",
+		"mobx-react": "6.2.1",
 		"pouchdb": "7.2.1",
 		"pouchdb-quick-search": "^1.3.0",
 		"react": "^16.13.1",
