--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
+		"diff-match-patch": "^1.0.5",
 		"leveldown": "5.6.0",
 		"mobx": "5.15.4",
 		"mobx-react": "6.2.1",
@@ -20,7 +21,9 @@
 		"pouchdb-quick-search": "^1.3.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
-		"react-scripts": "3.4.1"
+		"react-scripts": "3.4.1",
+		"string-punctuation-tokenizer": "^2.0.2",
+		"sweetalert": "2.1.2"
 	},
 	"build": {
 		"extends": "react-cra",
