--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,11 +4,15 @@
 	},
 	"editor.fontFamily": "'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
 	"editor.fontWeight": "500",
-	"editor.rulers": [80],
+	"editor.rulers": [
+		80
+	],
 	"editor.fontLigatures": true,
 	"prettier.tabWidth": 4,
 	"eslint.alwaysShowStatus": true,
-	"prettier.disableLanguages": ["js"],
+	"prettier.disableLanguages": [
+		"js"
+	],
 	"files.autoSave": "onFocusChange",
 	"prettier.useTabs": true,
 	"editor.formatOnSave": true,
