--- a/package.json
+++ b/package.json
@@ -70,13 +70,14 @@
 	],
 	"scripts": {
 		"start": "concurrently \"npm run react-start\" \"wait-on http://localhost:3000/ && cross-env NODE_ENV=development npm run electron-start\"",
+		"build": "npm run build:electron",
 		"electron-start": "electron .",
 		"react-start": "craco start",
 		"react-build": "craco build",
-		"lint": "eslint ./src",
-		"lint:fix": "eslint ./src --fix",
-		"build": "npm run build:electron",
+		"test": "craco test",
+		"eject": "react-scripts eject",
 		"build:electron": "craco build --config craco.config.js main=build/electron.js",
+		"preelectron-pack": "npm run build",
 		"electron-pack": "electron-builder -p never"
 	},
 	"browserslist": {
