--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
 		"react-build": "craco build",
 		"test": "craco test",
 		"eject": "react-scripts eject",
+		"lint": "eslint ./src",
+		"lint:fix": "eslint ./src --fix",
 		"build:electron": "craco build --config craco.config.js main=build/electron.js",
 		"preelectron-pack": "npm run build",
 		"electron-pack": "electron-builder -p never"
