--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
 		"lint:fix": "eslint ./src --fix",
 		"build:electron": "craco build --config craco.config.js main=build/electron.js",
 		"preelectron-pack": "npm run build",
+		"maxmemory-allocation": "NODE_OPTIONS=--max_old_space_size=4096"
 		"electron-pack": "electron-builder -p never"
 	},
 	"browserslist": {
