--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,7 +32,7 @@ jobs:
               run: npm config set '@bit:registry' https://node.bit.dev
             
             - name: set max memory allocation
-              run: export NODE_OPTIONS=–max_old_space_size=4096
+              run: npm run maxmemory-allocation
 
             - name: npm install
               run: npm ci
@@ -76,7 +76,7 @@ jobs:
               run: npm ci
             
             - name: set max memory allocation
-              run: set NODE_OPTIONS=–max_old_space_size=4096
+              run: npm run maxmemory-allocation
 
             - name: build windows
               id: build
