--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,7 @@ jobs:
         strategy:
             matrix:
                 node-version: [12.6]
-                os: [ubuntu-latest, macOS-latest]
+                os: [ubuntu-latest]
 
         steps:
             - uses: actions/checkout@v2
@@ -32,7 +32,7 @@ jobs:
               run: npm config set '@bit:registry' https://node.bit.dev
             
             - name: set max memory allocation
-              run: npm run maxmemory-allocation
+              run: export NODE_OPTIONS=–max_old_space_size=4096
 
             - name: npm install
               run: npm ci
@@ -76,7 +76,7 @@ jobs:
               run: npm ci
             
             - name: set max memory allocation
-              run: npm run maxmemory-allocation
+              run: set NODE_OPTIONS=–max_old_space_size=4096
 
             - name: build windows
               id: build
