--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
 		"build:electron": "craco build --config craco.config.js main=build/electron.js",
 		"preelectron-pack": "npm run build",
 		"maxmemory-allocation": "NODE_OPTIONS=--max_old_space_size=4096",
+		"eslint:github-action": "node ./node_modules/eslint/bin/eslint . --ignore-path .gitignore --max-warnings 0",
 		"electron-pack": "electron-builder -p never"
 	},
 	"browserslist": {
