--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,6 +6,8 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v1
+            - name: set @bitregistry translation-help
+              run: npm config set '@bit:registry' https://node.bit.dev
             - uses: borales/actions-yarn@v2.0.0
               with:
                   cmd: install # will run `yarn install` command
