--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 		"react-scripts": "3.4.1",
 		"rtl-detect": "1.0.0",
 		"string-punctuation-tokenizer": "^2.0.2",
-		"sweetalert": "2.1.2"
+		"sweetalert": "2.1.2",
+		"xml2js": "^0.4.23"
 	},
 	"build": {
 		"extends": "react-cra",
@@ -81,6 +82,7 @@
 		"build:electron": "craco build --config craco.config.js main=build/electron.js",
 		"preelectron-pack": "npm run build",
 		"maxmemory-allocation": "NODE_OPTIONS=--max_old_space_size=4096",
+		"eslint:github-action": "node ./node_modules/eslint/bin/eslint . --ignore-path .gitignore --max-warnings 0",
 		"electron-pack": "electron-builder -p never"
 	},
 	"browserslist": {
