--- a/package.json
+++ b/package.json
@@ -107,6 +107,9 @@
 		"electron-builder": "^22.5.1",
 		"eslint-config-prettier": "^6.11.0",
 		"eslint-plugin-prettier": "^3.1.3",
+		"enzyme": "^3.11.0",
+		"enzyme-adapter-react-16": "^1.15.2",
+		"jest-enzyme": "^7.1.2",
 		"prettier": "^2.0.5",
 		"wait-on": "^4.0.2"
 	}
