--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"mobx-react": "6.2.1",
 		"pouchdb": "7.2.1",
 		"pouchdb-quick-search": "^1.3.0",
+		"prop-types": "15.7.2",
 		"react": "^16.13.1",
 		"react-detect-offline": "2.4.0",
 		"react-dom": "^16.13.1",
@@ -75,7 +76,7 @@
 		"electron-start": "electron .",
 		"react-start": "craco start",
 		"react-build": "craco build",
-		"test": "craco test",
+		"test": "craco test --testPathIgnorePatterns=./node_modules/ --logHeapUsage",
 		"eject": "react-scripts eject",
 		"lint": "eslint ./src",
 		"lint:fix": "eslint ./src --fix",
@@ -84,6 +85,11 @@
 		"maxmemory-allocation": "NODE_OPTIONS=--max_old_space_size=4096",
 		"eslint:github-action": "node ./node_modules/eslint/bin/eslint . --ignore-path .gitignore --max-warnings 0",
 		"electron-pack": "electron-builder -p never"
+	},
+	"jest": {
+		"moduleNameMapper": {
+			"electron": "<rootDir>/__mocks__/electron.js"
+		}
 	},
 	"browserslist": {
 		"production": [
@@ -101,15 +107,15 @@
 		"@rescripts/cli": "0.0.10",
 		"@rescripts/rescript-env": "0.0.12",
 		"babel-plugin-react-intl": "^3.0.1",
+		"check-prop-types": "^1.1.2",
 		"concurrently": "^5.1.0",
 		"cross-env": "^7.0.2",
 		"electron": "^8.2.3",
 		"electron-builder": "^22.5.1",
-		"eslint-config-prettier": "^6.11.0",
-		"eslint-plugin-prettier": "^3.1.3",
 		"enzyme": "^3.11.0",
 		"enzyme-adapter-react-16": "^1.15.2",
-		"jest-enzyme": "^7.1.2",
+		"eslint-config-prettier": "^6.11.0",
+		"eslint-plugin-prettier": "^3.1.3",
 		"prettier": "^2.0.5",
 		"wait-on": "^4.0.2"
 	}
