--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"dependencies": {
 		"@bit/unfoldingword.resources.viewer": "^0.1.5",
 		"@craco/craco": "5.6.4",
+		"clsx": "1.1.1",
 		"@material-ui/core": "^4.9.12",
 		"@material-ui/icons": "^4.9.1",
 		"@material-ui/lab": "^4.0.0-alpha.52",
