--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
 	"dependencies": {
 		"@bit/unfoldingword.resources.viewer": "^0.1.5",
 		"@craco/craco": "5.6.4",
-		"clsx": "1.1.1",
 		"@material-ui/core": "^4.9.12",
 		"@material-ui/icons": "^4.9.1",
 		"@material-ui/lab": "^4.0.0-alpha.52",
@@ -16,7 +15,9 @@
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"axios": "^0.19.2",
+		"clsx": "1.1.1",
 		"diff-match-patch": "^1.0.5",
+		"font-list": "^1.2.11",
 		"leveldown": "5.6.0",
 		"mobx": "5.15.4",
 		"mobx-react": "6.2.1",
