Incorporating node js core functionality inside electron CRA

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"react-detect-offline": "2.4.0",
 		"react-dom": "^16.13.1",
 		"react-h5-audio-player": "1.2.1",
-		"react-intl": "^4.6.9",
+		"react-intl": "^4.7.6",
 		"react-mic-plus": "1.3.1",
 		"react-scripts": "3.4.1",
 		"rtl-detect": "1.0.0",
@@ -84,8 +84,8 @@
 		"start": "concurrently \"npm run react-start\" \"wait-on http://localhost:3000/ && cross-env NODE_ENV=development npm run electron-start\"",
 		"build": "npm run build:electron",
 		"electron-start": "electron .",
-		"react-start": "craco start",
-		"react-build": "craco build",
+		"react-start": "react-scripts start",
+		"react-build": "react-scripts build",
 		"test": "craco test --testPathIgnorePatterns=./node_modules/ --logHeapUsage",
 		"eject": "react-scripts eject",
 		"lint": "eslint ./src",
