--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
 		"diff-match-patch": "^1.0.5",
 		"electron-updater": "^4.3.4",
 		"font-list": "^1.2.11",
+		"gitea-react-toolkit": "^1.1.1",
 		"leveldown": "5.6.0",
+		"markdown-translatable": "^1.0.3",
 		"mobx": "5.15.4",
 		"mobx-react": "6.2.1",
 		"pouchdb": "7.2.1",
