--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
 	],
 	"scripts": {
 		"start": "concurrently \"npm run react-start\" \"wait-on http://localhost:3000/ && cross-env NODE_ENV=development npm run electron-start\"",
-		"build": "npm run build:electron",
 		"electron-start": "electron .",
 		"react-start": "react-scripts start",
 		"react-build": "react-scripts build",
@@ -74,11 +73,12 @@
 		"eject": "react-scripts eject",
 		"lint": "eslint ./src",
 		"lint:fix": "eslint ./src --fix",
-		"build:electron": "craco build --config craco.config.js main=build/electron.js",
+		"build:react": "react-scripts build",
+		"build:electron": "cross-env NODE_ENV=production electron-builder",
+		"electron-pack": "npm run build:react && npm run build:electron",
 		"preelectron-pack": "npm run build",
 		"maxmemory-allocation": "NODE_OPTIONS=--max_old_space_size=4096",
 		"eslint:github-action": "node ./node_modules/eslint/bin/eslint . --ignore-path .gitignore --max-warnings 0",
-		"electron-pack": "electron-builder -p never",
 		"deploy": "electron-builder build --win --publish always"
 	},
 	"jest": {
