changed in github action

--- a/package.json
+++ b/package.json
@@ -68,14 +68,13 @@
 		"start": "concurrently \"npm run react-start\" \"wait-on http://localhost:3000/ && cross-env NODE_ENV=development npm run electron-start\"",
 		"electron-start": "electron .",
 		"react-start": "react-scripts start",
-		"react-build": "react-scripts build",
 		"test": "craco test --testPathIgnorePatterns=./node_modules/ --logHeapUsage",
 		"eject": "react-scripts eject",
 		"lint": "eslint ./src",
 		"lint:fix": "eslint ./src --fix",
 		"build:react": "react-scripts build",
 		"build:electron": "cross-env NODE_ENV=production electron-builder",
-		"electron-pack": "npm run build:react && npm run build:electron",
+		"build": "npm run build:react && npm run build:electron",
 		"preelectron-pack": "npm run build",
 		"maxmemory-allocation": "NODE_OPTIONS=--max_old_space_size=4096",
 		"eslint:github-action": "node ./node_modules/eslint/bin/eslint . --ignore-path .gitignore --max-warnings 0",
