--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,7 +38,7 @@ jobs:
             - name: package
               id: package
               run: |
-                  npm run electron-pack
+                  npm run build
 
             - name: Cleanup artifacts
               run: |
@@ -79,7 +79,7 @@ jobs:
             - name: packaging
               id: packaging
               run: |
-                  npm run electron-pack
+                  npm run build
                   
             - name: Cleanup artifacts
               if: matrix.os != 'windows-latest'
