added mac build

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -41,7 +41,7 @@ jobs:
                 echo "::set-env name=APP_VERSION::$(node -p -e "require('./package.json').version")"
                 
             - name: Set artifact name
-              run: echo "::set-env name=ARTIFACT_NAME::$(echo "$APP_NAME-linux-x64-$APP_VERSION-$HASH.deb")"
+              run: echo "::set-env name=ARTIFACT_NAME::$(echo "Autographa-linux-x64-$APP_VERSION.deb")"
 
             - name: package
               id: package
@@ -90,7 +90,7 @@ jobs:
                 echo "::set-env name=APP_VERSION::$(node -p -e "require('./package.json').version")"
                 
             - name: Set x64 artifact name
-              run: echo "::set-env name=ARTIFACT_X64::$(echo "${{ env.APP_NAME }}-win-x64-${{ env.APP_VERSION }}-${{ env.HASH }}.exe")"
+              run: echo "::set-env name=ARTIFACT_X64::$(echo "Autographa-win-x64-${{ env.APP_VERSION }}.exe")"
 
             - name: packaging
               id: packaging
@@ -112,3 +112,51 @@ jobs:
               with:
                   name: ${{ env.ARTIFACT_X64 }}
                   path: artifacts
+
+    build-mac:
+        runs-on: ${{ matrix.os }}
+        env:
+            CI: false
+        strategy:
+            matrix:
+                node-version: [12.6]
+                os: [ubuntu-latest]
+
+        steps:
+            - uses: actions/checkout@v2
+            - name: Use Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v1
+              with:
+                  node-version: ${{ matrix.node-version }}
+            - run: |
+                  node --version
+                  npm --version
+            - name: set @bitregistry translation-help
+              run: npm config set '@bit:registry' https://node.bit.dev
+            
+            - name: npm install
+              run: npm ci
+              
+            - name: set max memory allocation
+              run: export NODE_OPTIONS=–max_old_space_size=4096
+            
+            - name: Read version and commit sha
+              run: |
+                echo "::set-env name=HASH::$(echo $GITHUB_SHA | cut -c1-7)"
+                echo "::set-env name=APP_VERSION::$(node -p -e "require('./package.json').version")"
+            - name: Set artifact name
+              run: echo "::set-env name=ARTIFACT_NAME::$(echo "Autographa-mac-x64-$APP_VERSION.dmg")"
+
+            - name: package
+              id: package
+              run: |
+                  npm run build
+
+            - name: Cleanup artifacts
+              run: |
+                  npx rimraf "dist/!(*.deb|*.AppImage|*.dmg)"
+            - name: Upload artifacts
+              uses: actions/upload-artifact@v1
+              with:
+                  name: ${{ env.ARTIFACT_NAME }}
+                  path: dist
