--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"markdown-translatable": "^1.0.3",
 		"mobx": "5.15.4",
 		"mobx-react": "6.3.0",
+		"moment": "^2.28.0",
 		"prop-types": "15.7.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
