--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-intl": "^4.7.6",
-		"react-scripts": "3.4.1",
-		"sweetalert": "2.1.2"
+		"react-scripts": "3.4.3",
+		"sweetalert": "2.1.2",
+		"winston": "^3.3.3"
 	},
 	"build": {
 		"extends": "react-cra",
