--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
 		"start": "concurrently \"npm run react-start\" \"wait-on http://localhost:3000/ && cross-env NODE_ENV=development npm run electron-start\"",
 		"electron-start": "electron .",
 		"react-start": "react-scripts start",
-		"test": "react-scripts test",
+		"test": "react-scripts test --coverage",
 		"eject": "react-scripts eject",
 		"lint": "eslint ./src",
 		"lint:fix": "eslint ./src --fix",
@@ -86,6 +86,10 @@
 		"deploy": "electron-builder build --win --publish always"
 	},
 	"jest": {
+		"coveragePathIgnorePatterns": [
+			"<rootDir>/node_modules/",
+			"<rootDir>/src/logger.js"
+		],
 		"moduleNameMapper": {
 			"electron": "<rootDir>/__mocks__/electron.js"
 		}
