--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
 		"clsx": "1.1.1",
 		"electron-updater": "^4.3.4",
 		"localforage": "1.9.0",
-		"markdown-translatable": "^1.0.3",
+		"markdown-translatable": "^1.0.4",
 		"mobx": "5.15.4",
 		"mobx-react": "6.3.0",
 		"moment": "^2.28.0",
+		"next": "^7.0.0",
+		"nprogress": "^0.2.0",
 		"prop-types": "15.7.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-intl": "^4.7.6",
+		"react-markdown": "^4.3.1",
 		"react-scripts": "3.4.3",
 		"sweetalert": "2.1.2",
 		"winston": "^3.3.3"
