--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@testing-library/user-event": "^7.2.1",
 		"clsx": "1.1.1",
 		"electron-updater": "^4.3.4",
+		"gitea-react-toolkit": "^1.3.5",
 		"localforage": "1.9.0",
 		"markdown-translatable": "^1.0.3",
 		"mobx": "5.15.4",
