--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,8 +16,8 @@ jobs:
             - name: set @bitregistry translation-help
               run: npm config set '@bit:registry' https://node.bit.dev
 
-            - name: npm install
-              run: npm ci
-
             - name: run lint
               run: npm run eslint:github-action
+            
+            - name: run tests
+              run: npm run test
