--- a/package.json
+++ b/package.json
@@ -1,22 +1,49 @@
 {
 	"name": "autographa",
+	"productName": "autographa-editor",
 	"version": "2.0.0",
-	"author": "Friends of Agape <mathew.joel@protonmail.com>",
 	"license": "MIT",
-	"main": "public/electron.js",
-	"homepage": ".",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/friendsofagape/autographa.git"
+	"main": "main/index.js",
+	"scripts": {
+		"clean": "rimraf dist renderer/.next renderer/out",
+		"start": "electron .",
+		"test": "jest",
+		"build": "next build renderer && next export renderer",
+		"pack-app": "npm run build && electron-builder --dir",
+		"dist": "npm run build && electron-builder"
+	},
+	"build": {
+		"asar": true,
+		"files": [
+			"main",
+			"renderer/out"
+		]
+	},
+	"devDependencies": {
+		"@testing-library/dom": "^7.25.0",
+		"@testing-library/jest-dom": "^5.11.4",
+		"@testing-library/react": "^11.0.4",
+		"@testing-library/user-event": "12.1.7",
+		"babel-plugin-react-intl": "^3.0.1",
+		"babel-jest": "^26.5.2",
+		"electron": "^10.1.3",
+		"electron-builder": "^22.9.1",
+		"jest": "^26.5.3",
+		"jest-dom": "^4.0.0",
+		"next": "latest",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
+		"eslint-config-prettier": "^6.11.0",
+		"eslint-plugin-prettier": "^3.1.3",
+		"prettier": "^2.0.5"
 	},
 	"dependencies": {
 		"@material-ui/core": "^4.9.12",
 		"@material-ui/icons": "^4.9.1",
 		"@material-ui/lab": "latest",
-		"@testing-library/jest-dom": "^4.2.4",
-		"@testing-library/react": "^9.5.0",
-		"@testing-library/user-event": "^7.2.1",
 		"clsx": "1.1.1",
+		"electron-is-dev": "^1.1.0",
+		"electron-next": "^3.1.5",
 		"electron-updater": "^4.3.4",
 		"gitea-react-toolkit": "^1.3.5",
 		"localforage": "1.9.0",
@@ -24,106 +51,11 @@
 		"mobx": "5.15.4",
 		"mobx-react": "6.3.0",
 		"moment": "^2.28.0",
-		"next": "^7.0.0",
 		"nprogress": "^0.2.0",
 		"prop-types": "15.7.2",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
+		"raw-loader": "^4.0.2",
 		"react-intl": "^4.7.6",
-		"react-markdown": "^4.3.1",
-		"react-scripts": "3.4.3",
 		"sweetalert": "2.1.2",
 		"winston": "^3.3.3"
-	},
-	"build": {
-		"extends": "react-cra",
-		"appId": "oa.autographa.live",
-		"publish": {
-			"provider": "github",
-			"token": "[paste token here]"
-		},
-		"files": [
-			"build/**/*.*",
-			"public/**/*.*",
-			"node_modules/**/*",
-			"src/**/*.*"
-		],
-		"directories": {
-			"buildResources": "resources"
-		},
-		"mac": {
-			"category": "public.app-category.Utilities",
-			"target": "dmg",
-			"icon": "resources/icon.icns",
-			"type": "distribution"
-		},
-		"linux": {
-			"target": [
-				"deb"
-			],
-			"icon": "resources/icon.png"
-		}
-	},
-	"keywords": [
-		"Desktop",
-		"Bible Editor",
-		"USFM",
-		"USFM Editor",
-		"React.js",
-		"Translation",
-		"Open Source"
-	],
-	"scripts": {
-		"start": "concurrently \"npm run react-start\" \"wait-on http://localhost:3000/ && cross-env NODE_ENV=development npm run electron-start\"",
-		"electron-start": "electron .",
-		"react-start": "react-scripts start",
-		"test": "react-scripts test --coverage",
-		"eject": "react-scripts eject",
-		"lint": "eslint ./src",
-		"lint:fix": "eslint ./src --fix",
-		"build:react": "react-scripts build",
-		"build:electron": "cross-env NODE_ENV=production electron-builder -p never",
-		"build": "npm run build:react && npm run build:electron",
-		"preelectron-pack": "npm run build",
-		"maxmemory-allocation": "NODE_OPTIONS=--max_old_space_size=4096",
-		"eslint:github-action": "node ./node_modules/eslint/bin/eslint . --ignore-path .gitignore --max-warnings 0",
-		"deploy": "electron-builder build --win --publish always"
-	},
-	"jest": {
-		"coveragePathIgnorePatterns": [
-			"<rootDir>/node_modules/",
-			"<rootDir>/src/logger.js"
-		],
-		"moduleNameMapper": {
-			"electron": "<rootDir>/__mocks__/electron.js"
-		}
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"@rescripts/cli": "0.0.10",
-		"@rescripts/rescript-env": "0.0.12",
-		"babel-plugin-react-intl": "^3.0.1",
-		"check-prop-types": "^1.1.2",
-		"concurrently": "^5.1.0",
-		"cross-env": "^7.0.2",
-		"electron": "^9.1.2",
-		"electron-builder": "^22.8.0",
-		"enzyme": "^3.11.0",
-		"enzyme-adapter-react-16": "^1.15.2",
-		"eslint-config-prettier": "^6.11.0",
-		"eslint-plugin-prettier": "^3.1.3",
-		"prettier": "^2.0.5",
-		"wait-on": "^4.0.2"
 	}
 }
