--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,8 @@
 	],
 	"rules": {
 		"react/react-in-jsx-scope": "off",
-		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+		"react/jsx-props-no-spreading": "off"
 	},
 	"env": {
 		"browser": true,
