--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,9 @@
 	"rules": {
 		"react/react-in-jsx-scope": "off",
 		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-		"react/jsx-props-no-spreading": "off"
+		"react/jsx-props-no-spreading": "off",
+		"eslint no-unused-expressions": "off",
+		"import/prefer-default-export": "off"
 	},
 	"env": {
 		"browser": true,
