--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
 	"version": "2.0.0",
 	"license": "MIT",
 	"main": "main/index.js",
+	"author": "Friends of Agape <mathew.joel@protonmail.com>",
+	"email": "mathew.joel@protonmail.com",
 	"scripts": {
 		"clean": "rimraf dist renderer/.next renderer/out",
 		"start": "electron .",
@@ -24,7 +26,12 @@
 		"files": [
 			"main",
 			"renderer/out"
-		]
+		],
+		"linux": {
+			"target": [
+				"deb"
+			]
+		}
 	},
 	"devDependencies": {
 		"@testing-library/dom": "^7.25.0",
