--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"electron-is-dev": "^1.1.0",
 		"electron-next": "^3.1.5",
 		"electron-updater": "^4.3.4",
+		"electron-log": "4.2.4",
 		"gitea-react-toolkit": "^1.3.5",
 		"localforage": "1.9.0",
 		"markdown-translatable": "^1.0.4",
