--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"version": "2.0.0",
 	"license": "MIT",
 	"main": "main/index.js",
-	"author": "Friends of Agape <mathew.joel@protonmail.com>",
-	"email": "mathew.joel@protonmail.com",
+	"author": "Friends of Agape",
+	"email": "mail@joelmath.io",
 	"scripts": {
 		"clean": "rimraf dist renderer/.next renderer/out",
 		"start": "electron .",
