--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "autographa",
 	"productName": "autographa-editor",
+	"description": "A Bible translation editor for everyone.",
 	"version": "2.0.0",
 	"license": "MIT",
 	"main": "main/index.js",
@@ -16,7 +17,7 @@
 		"maxmemory-allocation": "NODE_OPTIONS=--max_old_space_size=4096",
 		"eslint:github-action": "node ./node_modules/eslint/bin/eslint . --ignore-path .gitignore --max-warnings 0",
 		"pack-app": "npm run build && electron-builder --dir",
-		"dist": "npm run build && electron-builder"
+		"dist": "npm run build && electron-builder -p never"
 	},
 	"eslintIgnore": [
 		"*.test.js"
