lint fix for most of the files

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 		"clean": "rimraf dist renderer/.next renderer/out",
 		"start": "electron .",
 		"test": "jest",
-		"lint": "eslint ./renderer",
-		"lint:fix": "eslint ./renderer --fix",
+		"lint": "eslint ./renderer/src",
+		"lint:fix": "eslint ./renderer/src --fix",
 		"build": "next build renderer && next export renderer",
 		"maxmemory-allocation": "NODE_OPTIONS=--max_old_space_size=4096",
 		"eslint:github-action": "node ./node_modules/eslint/bin/eslint . --ignore-path .gitignore --max-warnings 0",
