--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,10 @@
 		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
 		"react/jsx-props-no-spreading": "off",
 		"eslint no-unused-expressions": "off",
-		"import/prefer-default-export": "off"
+		"import/prefer-default-export": "off",
+		"import/no-extraneous-dependencies": "off",
+		"react/require-default-props": "off",
+		"react/forbid-prop-types": "off"
 	},
 	"env": {
 		"browser": true,
