lint command altered for github actions

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,12 +15,15 @@ jobs:
                   npm --version
             - name: set @bitregistry translation-help
               run: npm config set '@bit:registry' https://node.bit.dev
-            
+
             - name: npm install
               run: npm ci
 
             - name: run lint
-              run: npm run eslint:github-action
-            
+              run: npm run lint
+
+            - name: run lint-fix
+              run: npm run lint:fix
+
             - name: run tests
               run: npm run test
