--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@testing-library/user-event": "12.1.7",
 		"babel-eslint": "^10.1.0",
 		"babel-jest": "^26.5.2",
+		"babel-plugin-istanbul": "^6.0.0",
 		"babel-plugin-react-intl": "^3.0.1",
 		"electron": "^10.1.3",
 		"electron-builder": "^22.9.1",
