--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,13 +12,25 @@
 	],
 	"rules": {
 		"react/react-in-jsx-scope": "off",
-		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+		"react/jsx-filename-extension": [
+			1,
+			{
+				"extensions": [
+					".js",
+					".jsx"
+				]
+			}
+		],
 		"react/jsx-props-no-spreading": "off",
 		"eslint no-unused-expressions": "off",
 		"import/prefer-default-export": "off",
 		"import/no-extraneous-dependencies": "off",
 		"react/require-default-props": "off",
-		"react/forbid-prop-types": "off"
+		"react/forbid-prop-types": "off",
+		"eslint linebreak-style": [
+			"error",
+			"windows"
+		]
 	},
 	"env": {
 		"browser": true,
