--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,13 +35,13 @@ jobs:
             - name: set max memory allocation
               run: export NODE_OPTIONS=–max_old_space_size=4096
 
-            - name: Read version and commit sha
-              run: |
-                  echo "::set-env name=HASH::$(echo $GITHUB_SHA | cut -c1-7)"
-                  echo "::set-env name=APP_VERSION::$(node -p -e "require('./package.json').version")"
+#             - name: Read version and commit sha
+#               run: |
+#                   echo "::set-env name=HASH::$(echo $GITHUB_SHA | cut -c1-7)"
+#                   echo "::set-env name=APP_VERSION::$(node -p -e "require('./package.json').version")"
 
-            - name: Set artifact name
-              run: echo "::set-env name=ARTIFACT_NAME::$(echo "Autographa-linux-x64-$APP_VERSION.deb")"
+#             - name: Set artifact name
+#               run: echo "::set-env name=ARTIFACT_NAME::$(echo "Autographa-linux-x64-$APP_VERSION.deb")"
 
             - name: package
               id: package
@@ -54,7 +54,7 @@ jobs:
             - name: Upload artifacts
               uses: actions/upload-artifact@v1
               with:
-                  name: ${{ env.ARTIFACT_NAME }}
+                  name: Autographa
                   path: dist
 
     build-windows:
@@ -84,13 +84,13 @@ jobs:
             - name: set max memory allocation
               run: set NODE_OPTIONS=–max_old_space_size=4096
 
-            - name: Read version and commit sha
-              run:
-                  echo "::set-env name=HASH::$(node -p -e "'${{ github.sha }}'.substring(0, 7)")"
-                  echo "::set-env name=APP_VERSION::$(node -p -e "require('./package.json').version")"
+#             - name: Read version and commit sha
+#               run:
+#                   echo "::set-env name=HASH::$(node -p -e "'${{ github.sha }}'.substring(0, 7)")"
+#                   echo "::set-env name=APP_VERSION::$(node -p -e "require('./package.json').version")"
 
-            - name: Set x64 artifact name
-              run: echo "::set-env name=ARTIFACT_X64::$(echo "Autographa-win-x64-${{ env.APP_VERSION }}.exe")"
+#             - name: Set x64 artifact name
+#               run: echo "::set-env name=ARTIFACT_X64::$(echo "Autographa-win-x64-${{ env.APP_VERSION }}.exe")"
 
             - name: packaging
               id: packaging
@@ -110,7 +110,7 @@ jobs:
             - name: Upload artifacts ${{ env.ARTIFACT_X64 }}
               uses: actions/upload-artifact@v1
               with:
-                  name: ${{ env.ARTIFACT_X64 }}
+                  name: Autographa
                   path: artifacts
 
     build-mac:
@@ -140,12 +140,12 @@ jobs:
             - name: set max memory allocation
               run: export NODE_OPTIONS=–max_old_space_size=4096
 
-            - name: Read version and commit sha
-              run: |
-                  echo "::set-env name=HASH::$(echo $GITHUB_SHA | cut -c1-7)"
-                  echo "::set-env name=APP_VERSION::$(node -p -e "require('./package.json').version")"
-            - name: Set artifact name
-              run: echo "::set-env name=ARTIFACT_NAME::$(echo "Autographa-mac-x64-$APP_VERSION.dmg")"
+#             - name: Read version and commit sha
+#               run: |
+#                   echo "::set-env name=HASH::$(echo $GITHUB_SHA | cut -c1-7)"
+#                   echo "::set-env name=APP_VERSION::$(node -p -e "require('./package.json').version")"
+#             - name: Set artifact name
+#               run: echo "::set-env name=ARTIFACT_NAME::$(echo "Autographa-mac-x64-$APP_VERSION.dmg")"
 
             - name: package
               id: package
@@ -158,5 +158,5 @@ jobs:
             - name: Upload artifacts
               uses: actions/upload-artifact@v1
               with:
-                  name: ${{ env.ARTIFACT_NAME }}
+                  name: Autographa
                   path: dist
