--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"electron-updater": "^4.3.4",
 		"gitea-react-toolkit": "^1.3.5",
 		"is-electron": "^2.2.0",
+		"jsonwebtoken": "^8.5.1",
 		"localforage": "1.9.0",
 		"markdown-translatable": "^1.0.4",
 		"mobx": "5.15.4",
