--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
 		"test": "jest",
 		"lint": "eslint ./renderer/src",
 		"lint:fix": "eslint ./renderer/src --fix",
-		"build": "next build renderer && next export renderer",
+		"build": "next build",
 		"maxmemory-allocation": "NODE_OPTIONS=--max_old_space_size=4096",
 		"eslint:github-action": "node ./node_modules/eslint/bin/eslint . --ignore-path .gitignore --max-warnings 0",
 		"pack-app": "npm run build && electron-builder --dir",
-		"dist": "npm run build && electron-builder -p never"
+		"dist": "npm run build && electron-builder -p never",
+		"postbuild": "next-on-netlify"
 	},
 	"eslintIgnore": [
 		"*.test.js"
@@ -44,6 +45,7 @@
 		"babel-jest": "^26.5.2",
 		"babel-plugin-istanbul": "^6.0.0",
 		"babel-plugin-react-intl": "^3.0.1",
+		"buffer-loader": "^0.1.0",
 		"electron": "^10.1.3",
 		"electron-builder": "^22.9.1",
 		"eslint": "^7.11.0",
@@ -74,6 +76,7 @@
 		"mobx-react": "6.3.0",
 		"moment": "^2.28.0",
 		"next": "latest",
+		"next-on-netlify": "^2.6.3",
 		"nprogress": "^0.2.0",
 		"prop-types": "15.7.2",
 		"raw-loader": "^4.0.2",
