added prefs rcl

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
 		"next": "latest",
 		"nprogress": "^0.2.0",
 		"prop-types": "15.7.2",
+		"prefs-rcl": "0.1.8",
 		"raw-loader": "^4.0.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
