--- a/package.json
+++ b/package.json
@@ -76,11 +76,11 @@
 		"mobx": "5.15.4",
 		"mobx-react": "6.3.0",
 		"moment": "^2.28.0",
-		"next": "10.0.5",
+		"next": "latest",
 		"next-on-netlify": "^2.6.3",
 		"nprogress": "^0.2.0",
+		"prefs-rcl": "^0.1.8",
 		"prop-types": "15.7.2",
-		"prefs-rcl": "0.1.8",
 		"raw-loader": "^4.0.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
