--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"eslint-plugin-prettier": "^3.1.4",
 		"eslint-plugin-react": "^7.21.4",
 		"eslint-plugin-react-hooks": "^4.1.2",
+		"eslint-plugin-simple-import-sort": "^7.0.0",
 		"jest": "^26.5.3",
 		"jest-dom": "^4.0.0",
 		"prettier": "^2.0.5"
