--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	"scripts": {
 		"clean": "rimraf dist renderer/.next renderer/out",
 		"start": "electron .",
-		"dev": "next dev",
+		"dev": "next dev --hostname 127.0.0.1 -p 3000",
 		"test": "jest",
 		"lint": "eslint ./renderer/src",
 		"lint:fix": "eslint ./renderer/src --fix",
@@ -64,6 +64,7 @@
 		"@material-ui/core": "^4.9.12",
 		"@material-ui/icons": "^4.9.1",
 		"@material-ui/lab": "latest",
+		"@ory/kratos-client": "^0.5.4-alpha.1",
 		"clsx": "1.1.1",
 		"electron-is-dev": "^1.1.0",
 		"electron-log": "4.2.4",
