--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
 		"@material-ui/core": "^4.9.12",
 		"@material-ui/icons": "^4.9.1",
 		"@material-ui/lab": "latest",
+		"bible-reference-rcl": "^0.2.0",
 		"clsx": "1.1.1",
 		"electron-is-dev": "^1.1.0",
 		"electron-log": "4.2.4",
@@ -86,7 +87,9 @@
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-intl": "^4.7.6",
+		"scripture-resources-rcl": "^3.2.0",
 		"sweetalert": "2.1.2",
+		"translation-helps-rcl": "^1.5.0",
 		"winston": "^3.3.3"
 	}
 }
