--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,8 @@ lib-cov
 
 # Coverage directory used by tools like istanbul
 coverage
+.vscode/settings.json
+.next
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
