--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-intl": "^4.7.6",
+		"resource-workspace-rcl": "0.6.0",
 		"scripture-resources-rcl": "^3.2.0",
 		"sweetalert": "2.1.2",
 		"translation-helps-rcl": "^1.5.0",
