--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
 		"maxmemory-allocation": "NODE_OPTIONS=--max_old_space_size=4096",
 		"eslint:github-action": "node ./node_modules/eslint/bin/eslint . --ignore-path .gitignore --max-warnings 0",
 		"pack-app": "npm run build && electron-builder --dir",
-		"dist": "npm run build && electron-builder -p never",
-		"postbuild": "next-on-netlify"
+		"dist": "npm run build && electron-builder -p never"
 	},
 	"eslintIgnore": [
 		"*.test.js"
@@ -37,6 +36,7 @@
 		}
 	},
 	"devDependencies": {
+		"@netlify/plugin-nextjs": "^3.0.3",
 		"@testing-library/dom": "^7.25.0",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.0.4",
@@ -79,13 +79,13 @@
 		"mobx-react": "6.3.0",
 		"moment": "^2.28.0",
 		"next": "latest",
-		"next-on-netlify": "^2.6.3",
+		"next-on-netlify": "^2.9.0",
 		"nprogress": "^0.2.0",
 		"prefs-rcl": "^0.1.8",
 		"prop-types": "15.7.2",
 		"raw-loader": "^4.0.2",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
 		"react-intl": "^4.7.6",
 		"sweetalert": "2.1.2",
 		"winston": "^3.3.3"
